--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -13,8 +13,8 @@ $promos: (
 
 // Sidebar Variables
 $sidebarImage: "../img/SB-grand-opening.jpg";
-$sidebarHeader: "Grand Opening";
-$sidebarText: "League kickoff begins on February 9th at 8PM Eastern on CBS.";
+$sidebarHeader: "Full Steed Ahead";
+$sidebarText: "After a hard-fought opening game loss, the Stallions look to rebound this week against the tough Birmingham Iron.";
 $sidebarPicHeight: 389px;
 $sidebarPicOffset: 0;
 
