--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -12,7 +12,7 @@ $promos: (
 );
 
 // Sidebar Variables
-$sidebarImage: "../img/SB-grand-opening.jpg";
+$sidebarImage: "../img/SB-week-1.jpg";
 $sidebarHeader: "Full Steed Ahead";
 $sidebarText: "After a hard-fought opening game loss, the Stallions look to rebound this week against the tough Birmingham Iron.";
 $sidebarPicHeight: 389px;
