--- a/src/scss/screen.scss
+++ b/src/scss/screen.scss
@@ -1,35 +1,25 @@
 /* Aurelian by r/nfl */
 
-// Theme Controller
-@import "./_controls.scss";
+$color-first: #0032A0;
+$color-second: #4698CA;
+$color-third: #C1C6C8;
 
-// Modules
-@import "./modules/_functions.scss";
-@import "./modules/_variables.scss";
-@import "./modules/_mixins.scss";
-@import "./modules/_placeholders.scss";
-@import "./modules/_transitions.scss";
-@import "./modules/_animations.scss";
+// base theme
+@import "_controls.scss";
 
-// Patterns
-@import "./patterns/_typography.scss";
-@import "./patterns/_buttons.scss";
-@import "./patterns/_tables.scss";
+// theme controller
+@import "r-aafb-base-theme/theme/index";
 
-// Components
-@import "./components/_global.scss";
-@import "./components/_reddit-header.scss";
-@import "./components/_reddit-sidebar.scss";
-@import "./components/_reddit-oc.scss";
-@import "./components/_reddit-content.scss";
-@import "./components/_res.scss";
+// modules
+@import "modules/teams-header";
 
-// Post Types
-@import "./post-types/_thread-trashtalk.scss";
-@import "./post-types/_thread-pressbox.scss";
+// states
+@import "states/res";
+@import "states/nightmode";
+
 
 // Themes
-@import "./themes/_storm-theme.scss";
+@import "./themes/storm-theme";
 
 // yeah, no reddit new button
 #sr-header-area div.redesign-beta-optin{
